
5.2b1 -> 5.3a1
    - jbj: poptDB: wire up --rpmtxndebug, collect other rpmdb debugging options.
    - jbj: rpmte: stub-in a parent transaction.
    - jbj: rpmtxn: add a parent transaction argument.
    - jbj: rpmtxn: add abstract typedef and drill throughout the API.
    - jbj: rpmtxn: expose the existing rpmtxn API for refactoring work.
    - jbj/glen: strip possible chroot prefix from db opened paths in
	Open(2) wrapper. LP#347749
    - jbj: dbi: tear out the rpmdb->db_rebuilding construction scaffholding.
	DB->associate() cascaded callbacks to generate bulk secondary index key
	stores are now functional with --rebuilddb.
    - jbj: add uniqification filtering for argv/uint32_t/uint64_t secondary keys.
	DB_DUPSORT can likely be free;y applied as a schema qualifier.
    - jbj: dbi: add currently existing secondary key filtering and transforms
	through the DB->associate() callback.
    - jbj: dbi: Backout the PRCO EVR/F tables, the PRCO assertion tables won't need no
	steenkin' joins.
    - jbj: dbi: add tables for PRCO dependency assertions based on YAML spewage.
	rude & crude but "works".
    - jbj: rpmtag: make sure that he->tag contains the assigned tag numbers.
    - jbj: rpmtag: assign numbers to the YAML PRCO tags to index assertions.
    - jbj: rpmbf: pass string length where needed.
    - jbj: dbi: commit to DB->associate() secondary indices as default
	(w exceptions, todo++).
    - jbj: dbi: commit to DB_DUP/DB_DUPSORT as default (w exceptions, todo++).
    - jbj: dbi: commit to dbi->dbi_jlen == 4 as default (w exceptions, todo++).
    - jbj: dbi: commit to DB_BTREE as default (w exceptions, todo++).
    - jbj: dbi: permit tag tables to be secondary indices with dupes.
    - devzero2000: add security CFLAGS for GCC if supported
    - jbj: dbi: configure new indices with 4b join keys and duplicates.
    - jbj: dbi: generate additional indices.
    - jbj: dbi: add db->associate_foreign.
    - devzero2000: add rpm-genenerate-loop-test-harness.sh 