@@ -34,6 +34,7 @@ typedef enum rpmElementType_e {
 
 #if	defined(_RPMTE_INTERNAL)
 #include <argv.h>
+#include <rpmtxn.h>
 #include <rpmal.h>
 
 /** \ingroup rpmte
@@ -135,8 +136,13 @@ struct rpmte_s {
 /*@null@*/
     rpmPRCO PRCO;		/*!< Current dependencies. */
 
+/*@null@*/
+    rpmtxn txn;			/*!< Package transaction pointer. */
 /*@refcounted@*/ /*@null@*/
     rpmfi fi;			/*!< File information. */
+#ifdef	REFERENCE
+    rpmpol pol;			/*!< Policies */
+#endif
 
     rpmuint32_t depFlags;	/*!< Package depFlags mask. */
     rpmuint32_t transFlags;	/*!< Package transFlags mask. */
@@ -647,6 +653,25 @@ rpmds rpmteDS(rpmte te, rpmTag tag)
  */
 rpmfi rpmteFI(rpmte te, rpmTag tag)
 	/*@*/;
+
+#ifdef	REFERENCE
++/** \ingroup rpmte
++ * Set the policy set of a transaction element.
++ * @param te		transaction element
++ * @param pol		policy set
++ * @return		policy set on success, NULL otherwise
++ */
++rpmpol rpmteSetPol(rpmte te, rpmpol pol)
++	/*@modifies te @*/;
++
++/** \ingroup rpmte
++ * Retrieve policy set from transaction element.
++ * @param te		transaction element
++ * @return		policy set
++ */
++rpmpol rpmtePol(rpmte te)
++	/*@*/;
+#endif
 
 /** \ingroup rpmte
  * Calculate transaction element dependency colors/refs from file info.
